--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h1>WebAR by Model Viewer</h1>
   <figure class="ar-img">
     <model-viewer class="ar-model" poster="earth.gif" src="earth_ball.gltf" ios-src="earth_ball.usdz" auto-rotate camera-controls ar alt="地球"></model-viewer>
-    <figcaption class="ar-caption">&copy; Robert Mirabelle</figcaption>
+    <figcaption class="ar-caption">&copy; コピーライト</figcaption>
   </figure>
   <p class="ar-text">model-viewerはほぼ全てのブラウザーでAR体験を可能にします。</p>
 </div>
